[gd_scene load_steps=18 format=3 uid="uid://ddgiwkq38wjib"]

[ext_resource type="Script" uid="uid://d1xg5skmioapy" path="res://src/ui/components/profile/profile_about.gd" id="1_about"]
[ext_resource type="FontFile" uid="uid://nlqb3vmhfsld" path="res://assets/themes/fonts/inter/inter_700.ttf" id="2_font700"]
[ext_resource type="LabelSettings" uid="uid://6uimow55ok0b" path="res://src/ui/components/profile/profile_description_label_settings.tres" id="3_desc_ls"]
[ext_resource type="PackedScene" uid="uid://cwthmkhfqjqb2" path="res://src/ui/components/profile/about_data.tscn" id="4_about_data"]
[ext_resource type="Texture2D" uid="uid://2sfb80lkd1ku" path="res://assets/ui/country-icon.svg" id="5_3dgdc"]
[ext_resource type="Texture2D" uid="uid://cvoaqevx752jo" path="res://assets/ui/language-icon.svg" id="5_8teom"]
[ext_resource type="PackedScene" uid="uid://d0hixhgq3pfdu" path="res://src/ui/components/settings/underlined_button.tscn" id="5_underlined"]
[ext_resource type="Texture2D" uid="uid://m5b5ucxg1ojd" path="res://assets/ui/pronouns-icon.svg" id="6_72d1u"]
[ext_resource type="FontFile" uid="uid://drw8yv4w843s4" path="res://assets/themes/fonts/inter/Inter-SemiBold.ttf" id="6_font_semi"]
[ext_resource type="Texture2D" uid="uid://dq1faq3kbcjuq" path="res://assets/ui/relationship-icon.svg" id="7_7vv4g"]
[ext_resource type="Texture2D" uid="uid://dybpbif7o8fwv" path="res://assets/ui/sexual-orientation-icon.svg" id="7_72d1u"]
[ext_resource type="Texture2D" uid="uid://diqxkbpdndas" path="res://assets/ui/gender-icon.svg" id="8_w128x"]
[ext_resource type="Texture2D" uid="uid://rj1u6kg1gwd1" path="res://assets/ui/profession-icon.svg" id="10_1kjum"]
[ext_resource type="Texture2D" uid="uid://d02sq5beqvafj" path="res://assets/ui/employment-icon.svg" id="11_p128h"]
[ext_resource type="Texture2D" uid="uid://dvt6fopad7mi" path="res://assets/ui/real-name-icon.svg" id="11_wv437"]
[ext_resource type="Texture2D" uid="uid://dxov5ntoqp1tw" path="res://assets/ui/hobby-icon.svg" id="14_li7if"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("2_font700")
font_size = 22
font_color = Color(0.9098039, 0.7254902, 1, 1)

[node name="ProfileAbout" type="VBoxContainer"]
offset_right = 773.0
offset_bottom = 458.0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_about")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 13
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "About me"
label_settings = SubResource("LabelSettings_title")
uppercase = true

[node name="MarginContainer_Description" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="Label_InfoDescription" type="Label" parent="MarginContainer_Description"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Use this space to describe yourself in a few words."
label_settings = ExtResource("3_desc_ls")
autowrap_mode = 2

[node name="MarginContainer_DataAbout" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="GridContainer_About" type="GridContainer" parent="MarginContainer_DataAbout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 24
columns = 3

[node name="AboutData_Country" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Country"
icon = ExtResource("5_3dgdc")

[node name="AboutData_Language" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Language"
icon = ExtResource("5_8teom")

[node name="AboutData_Pronouns" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Pronouns"
icon = ExtResource("6_72d1u")

[node name="AboutData_Gender" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Gender"
icon = ExtResource("8_w128x")

[node name="AboutData_RelationshipStatus" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Relationship Status"
icon = ExtResource("7_7vv4g")

[node name="AboutData_SexualOrientation" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Sexual Orientation"
icon = ExtResource("7_72d1u")

[node name="AboutData_EmploymentStatus" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Employment Status"
icon = ExtResource("11_p128h")

[node name="AboutData_Profession" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Profession"
icon = ExtResource("10_1kjum")

[node name="AboutData_RealName" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "Real Name"
icon = ExtResource("11_wv437")

[node name="AboutData_Hobby" parent="MarginContainer_DataAbout/GridContainer_About" instance=ExtResource("4_about_data")]
unique_name_in_owner = true
layout_mode = 2
title = "HOBBY"
icon = ExtResource("14_li7if")

[node name="MarginContainer_SeeMore" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 18

[node name="HBoxContainer_SeeMore" type="HBoxContainer" parent="MarginContainer_SeeMore"]
layout_mode = 2
alignment = 2

[node name="UnderlinedButton_SeeMore" parent="MarginContainer_SeeMore/HBoxContainer_SeeMore" instance=ExtResource("5_underlined")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
underlined_text = "SEE MORE"
color = Color(0.627451, 0.67058825, 1, 1)
font = ExtResource("6_font_semi")
font_size = 16
